--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "devDependencies": {
     "@types/jest": "^23.3.0",
     "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
     "@types/react-test-renderer": "^16.0.1",
     "jest": "^23.4.1",
+    "react-dom": "^16.4.1",
     "react-test-renderer": "^16.4.1",
     "react-testing-library": "^4.1.3",
     "ts-jest": "^23.0.1",
